src/components/feed/feed.module.scss
@import "../../styles/theme";
@import "../../styles/mixins/rhythm";

.feed {
  position: relative;
  color: inherit;
  @include margin-bottom(3.5);
}

.feed_item {
  @include margin-bottom(1.7857);
}

.feed_item_header {
  @include margin-bottom(0.5714);
}

.post_title {
  margin-top: 0;
  margin-bottom: 0;
  font-size: $base-font-size * 1.5;
  font-weight: $bold;
}

.post_title_link {
  text-decoration: none;
  color: inherit;
  &:hover,
  &:focus {
    border-bottom: 1px solid $color-link-hover;
  }
}

.post_meta {
  color: $color-secondary;
  margin-top: 0;
}

.post_excerpt {
  color: inherit;
  margin: 0;
}

